<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">CalendarDemo</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="sunday">Sun</string>
    <string name="month_format">MMMM yyyy</string>
    <string name="passing_dateformat">yyyy-MM-dd</string>
</resources>