<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/calendaractivity_parentbar"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <TextView
        android:id="@+id/calendaractivity_header"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textSize="18dp"
        android:gravity="center"
        android:textStyle="bold"/>
    <RelativeLayout
        android:id="@+id/calendar_monthTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/calendaractivity_header"
        android:layout_marginTop="5dp"
        android:background="@android:color/transparent">
        <Button
            android:id="@+id/btnPreviousMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="3dp">
        </Button>
        <TextView
            android:id="@+id/txtMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:ellipsize="end"
            android:singleLine="true"
            android:textSize="18dp"
            android:textStyle="bold"/>
        <Button
            android:id="@+id/btnNextMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:layout_marginTop="3dp">
        </Button>
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/calendar_days"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/calendar_monthTitle"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/transparent"
        android:orientation="horizontal"
        android:paddingLeft="5dp"
        android:paddingRight="7dp">
        <TextView
            android:id="@+id/txtSunday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/sunday"
            android:textStyle="bold">
        </TextView>
        <TextView
            android:id="@+id/txtMonday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/monday"
            android:textStyle="bold">
        </TextView>
        <TextView
            android:id="@+id/txtTuesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tuesday"
            android:textStyle="bold">
        </TextView>
        <TextView
            android:id="@+id/txtWednesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/wednesday"
            android:textStyle="bold">
        </TextView>
        <TextView
            android:id="@+id/txtThursday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/thursday"
            android:textStyle="bold">
        </TextView>
        <TextView
            android:id="@+id/txtFriday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/friday"
            android:textStyle="bold">
        </TextView>
        <TextView
            android:id="@+id/txtSaturday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/saturday"
            android:textStyle="bold">
        </TextView>
    </LinearLayout>
    <GridView
        android:id="@+id/month_gridView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/calendar_days"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="8dp"
        android:background="@color/grid_background"
        android:fadingEdge="none"
        android:gravity="top|left"
        android:horizontalSpacing="2dp"
        android:listSelector="@android:color/transparent"
        android:numColumns="7"
        android:padding="1dp"
        android:stretchMode="columnWidth"
        android:verticalSpacing="2dp">
    </GridView>
</RelativeLayout>